--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -9,6 +9,8 @@ AllCops:
     - 'support/**/*'
     - 'tmp/**/*'
     - 'test/**/*'
+    - 'Gemfile'
+    - 'spec/spec_helper.rb'
 
 Style/ConditionalAssignment:
   Enabled: false
