--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -52,4 +52,6 @@ jobs:
           cp config/database.github.yml config/database.yml
           bundle exec rails db:create db:migrate
       - name: Run tests
+        run: rubocop
+      - name: Run tests
         run: bundle exec rspec
