--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -52,6 +52,6 @@ jobs:
           cp config/database.github.yml config/database.yml
           bundle exec rails db:create db:migrate
       - name: Run linter
-        run: bundle exec rake rubocop
+        run: bundle exec rubocop
       - name: Run tests
         run: bundle exec rspec
